k8s/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mern-app-prd
    component: database
  name: database
  namespace: mern-app-prd
spec:
  replicas: 1
  selector:
    matchLabels:
      service: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: database
    spec:
      containers:
      - image: mongo:latest
        imagePullPolicy: ''
        name: database
        ports:
        - containerPort: 27017
        resources: {}
        volumeMounts:
        - mountPath: /data/db
          name: database
      restartPolicy: Always
      volumes:
      - name: database
        persistentVolumeClaim:
          claimName: database-pvc
