k8s/frontend-deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mern-app-dev
    component: frontend-dev
  name: frontend-dev
  namespace: mern-app-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mern-app-dev
      component: frontend-dev
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mern-app-dev
        component: frontend-dev
    spec:
      containers:
      - image: mmodi/frontend-dev:latest
        imagePullPolicy: ''
        name: frontend-dev
        resources: {}
      restartPolicy: Always
      serviceAccountName: ''
status: {}
