k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mern-app-prd
    component: frontend
  name: frontend
  namespace: mern-app-prd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mern-app-prd
      component: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mern-app-prd
        component: frontend
    spec:
      containers:
      - image: mmodi/frontend-prd:latest
        imagePullPolicy: ''
        name: frontend
        resources: {}
      restartPolicy: Always
      serviceAccountName: ''
status: {}
