k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: mern-app-prd
spec:
  ports:
  - protocol: 
    port: 8080
    #NodePort: 8090
  selector:
    service: backend
  type: NodePort
