k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-svc
  namespace: mern-app-prd
spec:
  ports:
  - protocol: 
    port: 27017
    #NodePort: 8090
  selector:
    service: database
  type: NodePort
