k8s/frontend-service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mern-app-dev
    component: frontend-dev
  name: frontend-svc
  namespace: mern-app-dev
spec:
  ports:
  - port: 80
    protocol: null
  selector:
    app: mern-app-dev
    component: frontend-dev
  type: NodePort
