k8s/frontend-service-dr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mern-app-dr
    component: frontend-dr
  name: frontend-svc-dr
  namespace: mern-app-dr
spec:
  ports:
  - port: 80
    protocol: null
  selector:
    app: mern-app-dr
    component: frontend-dr
  type: NodePort
