k8s/frontend-service-sit1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mern-app-sit1
    component: frontend-sit1
  name: frontend-svc-sit1
  namespace: mern-app-sit1
spec:
  ports:
  - port: 80
    protocol: null
  selector:
    app: mern-app-sit1
    component: frontend-sit1
  type: NodePort
