k8s/frontend-service-sit2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mern-app-sit2
    component: frontend-sit2
  name: frontend-svc-sit2
  namespace: mern-app-sit2
spec:
  ports:
  - port: 80
    protocol: null
  selector:
    app: mern-app-sit2
    component: frontend-sit2
  type: NodePort
