k8s/frontend-service-uat.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mern-app-uat
    component: frontend-uat
  name: frontend-svc-uat
  namespace: mern-app-uat
spec:
  ports:
  - port: 80
    protocol: null
  selector:
    app: mern-app-uat
    component: frontend-uat
  type: NodePort
