k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mern-app-prd
    component: frontend
  name: frontend-svc
  namespace: mern-app-prd
spec:
  ports:
  - port: 80
    protocol: null
  selector:
    app: mern-app-prd
    component: frontend
  type: NodePort
