k8s/ingress-resource-dr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: mern-app-prd
    component: ingress
  name: dr-ingress
  namespace: mern-app-dr-clone
spec:
  ingressClassName: nginx
  rules:
  - host: dr.myexampleapp.com
    http:
      paths:
      - backend:
          service:
            name: backend-svc
            port:
              number: 8080
        path: /api-docs
        pathType: Prefix
      - backend:
          service:
            name: backend-svc
            port:
              number: 8080
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: frontend-svc-dr
            port:
              number: 80
        path: /
        pathType: Prefix
