k8s/ingress-resource-sit1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: mern-app-sit1
    component: ingress
  name: sit1-ingress
  namespace: mern-app-sit1
spec:
  ingressClassName: nginx
  rules:
  - host: sit1.myexampleapp.com
    http:
      paths:
      - backend:
          service:
            name: backend-svc
            port:
              number: 8080
        path: /api-docs
        pathType: Prefix
      - backend:
          service:
            name: backend-svc
            port:
              number: 8080
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: frontend-svc-sit1
            port:
              number: 80
        path: /
        pathType: Prefix
