k8s/ingress-resource-sit2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: mern-app-sit2
    component: ingress
  name: sit2-ingress
  namespace: mern-app-sit2
spec:
  ingressClassName: nginx
  rules:
  - host: sit2.myexampleapp.com
    http:
      paths:
      - backend:
          service:
            name: backend-svc
            port:
              number: 8080
        path: /api-docs
        pathType: Prefix
      - backend:
          service:
            name: backend-svc
            port:
              number: 8080
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: frontend-svc-sit2
            port:
              number: 80
        path: /
        pathType: Prefix
