k8s/ingress-resource-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: mern-app-test
    component: ingress
  name: test-ingress
  namespace: mern-app-test
spec:
  ingressClassName: nginx
  rules:
  - host: test.myexampleapp.com
    http:
      paths:
      - backend:
          service:
            name: backend-svc
            port:
              number: 8080
        path: /api-docs
        pathType: Prefix
      - backend:
          service:
            name: backend-svc
            port:
              number: 8080
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: frontend-svc-test
            port:
              number: 80
        path: /
        pathType: Prefix
