k8s/ingress-resource-uat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: mern-app-uat
    component: ingress
  name: uat-ingress
  namespace: mern-app-uat
spec:
  ingressClassName: nginx
  rules:
  - host: uat.myexampleapp.com
    http:
      paths:
      - backend:
          service:
            name: backend-svc
            port:
              number: 8080
        path: /api-docs
        pathType: Prefix
      - backend:
          service:
            name: backend-svc
            port:
              number: 8080
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: frontend-svc-uat
            port:
              number: 80
        path: /
        pathType: Prefix
